# m2-C

./: .gitignore  readme.txt
c-code-testing/test-convert/: CMakeLists.txt  main.cpp
c-code-testing/test-convert/lib/: Random.cpp  Random.h  system.cpp  system.h
c-code-testing/test-convert/messages/: messageAttribute.hpp  messageHeader.hpp
c-code-testing/test-convert/tests/: test_all.cpp
c-code-testing/test-convert/util/: byteUtil.cpp  byteUtil.h  pack.h  testclasses.h
java-code/: .gitignore  pom.xml
java-code/m2common/: pom.xml
java-code/m2common/src/main/java/no/auke/mail/: EmailMessages.java  EmailSenderConfiguration.java  MailSender.java
java-code/m2core/: .gitignore  pom.xml
java-code/m2core/src/main/java/no/auke/encryption/: EncryptException.java  EncryptExceptionTypes.java  Encryption.java  EncryptionFactory.java  EncryptionStandard.java  EncryptionType.java  IEncryptionUtil.java  KeyBase.java  KeyCreator.java  KeyPair.java  KeyReader.java  PrivateKey.java  PublicKey.java  SecurityUtil.java
java-code/m2core/src/main/java/no/auke/http/: AutoCheckClient.java  ClientSessionNoJetty.java  HttpSession.java  IResponseHandler.java  RequestFunc.java  (+1 more)
java-code/m2license/: .gitignore  pom.xml
java-code/m2license/src/main/resources/: logback.license.xml  server.keystore
java-code/m2peerservice/: .gitignore  m2.config  pom.xml
java-code/m2peerservice/src/main/resources/: logback.xml  m2peer.license
java-code/m2peerservice/src/test/resources/: logback.xml  map-may2012.key
udp-send-study/: build.gradle  gradle.properties  settings.gradle
(+236 files in other folders)
